Fix layout issues on iOS devices

--- a/django-website/frontend/client/scss/abstracts/_breakpoints.scss
+++ b/django-website/frontend/client/scss/abstracts/_breakpoints.scss
@@ -10,4 +10,4 @@ $max-xsmall: (max-width: 600px);
 $max-small: (max-width: 960px);
 $max-medium: (max-width: 1280px);
 
-$small-landscape: '(max-width: 960px) and (max-height: 600px) (orientation: landscape)';
+$small-landscape: '(max-width: 960px) and (max-height: 450px) (orientation: landscape)';
